--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 	<title>Invie - tus mejores guitarras!!</title>
+	<meta charset="utf-8">
 	</head>
 	<body>
 	<header><!-- header -->
 		
 		<figure><!-- logotipo -->
-			<img src="">
+			<img src="images/invie.png" width="186"  height="60" alt="Invie logotipo">
 		</figure>
 		<nav><!-- menu -->
 		<ul>
@@ -30,7 +31,7 @@
 		<!-- guitarras -->
 		<h2>Nuestras guitarras</h2><!-- titulo -->
 		<article>
-			<img src="">
+			<img src="images/invie-acustica.png" alt="Guitarra invie acustica" width="200">
 			<h3>Invie Acustica</h3>
 				<ol>
 					<li>Estilo vintage</li>
@@ -38,7 +39,7 @@
 					<li>Incluye estuche invisible de aluminio</li>
 				</ol>
 		</article><article>
-			<img src="">
+			<img src="images/invie-classic.png" alt="Guitarra invie classic" width="200">
 			<h3>Invie Classic</h3>
 				<ol>
 					<li>Estilo vintage</li>
