referencia href de enlaces agregada

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<nav><!-- menu -->
 		<ul>
 		 <li>
-		 	<a href="">home</a>
+		 	<a href="index.html">home</a>
 		 </li>
 		 <li>
-		 	<a href="">Precios</a>
+		 	<a href="precios.html">Precios</a>
 		 </li>
 		</ul>
 		</nav>
