--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	</head>
 	<body>
-	<header><!-- header -->
+	<header id="header"><!-- header -->
 		
 		<figure><!-- logotipo -->
 			<img src="images/invie.png" width="186"  height="60" alt="Invie logotipo">
@@ -21,13 +21,13 @@
 		</ul>
 		</nav>
 	</header>
-	<section>
+	<section id="portada">
 		<!-- portada -->
 		<h1>Guitarras inviesibles</h1><!-- titulo -->
 		<h3>Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
 		<button>Conoce mas</button><!-- boton -->
 	</section>
-	<section>
+	<section id=guitarras>
 		<!-- guitarras -->
 		<h2>Nuestras guitarras</h2><!-- titulo -->
 		<article>
