--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 	<head>
 	<title>Invie - tus mejores guitarras!!</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/invie.css">
 	</head>
-	<body>
-	<header id="header"><!-- header -->
+	<body id="body">
+	<header id="header" class="header"><!-- header -->
 		
 		<figure><!-- logotipo -->
 			<img src="images/invie.png" width="186"  height="60" alt="Invie logotipo">
 		</figure>
-		<nav><!-- menu -->
+		<nav class="menu"><!-- menu -->
 		<ul>
 		 <li>
 		 	<a href="index.html">home</a>
+		 </li>
+		 <li>
+		 	<a href="#guitarras">Guitarras</a>
 		 </li>
 		 <li>
 		 	<a href="precios.html">Precios</a>
@@ -21,18 +25,18 @@
 		</ul>
 		</nav>
 	</header>
-	<section id="portada">
+	<section id="portada" class="portada">
 		<!-- portada -->
-		<h1>Guitarras inviesibles</h1><!-- titulo -->
-		<h3>Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
+		<h1 class="titulo">Guitarras inviesibles</h1><!-- titulo -->
+		<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
 		<button>Conoce mas</button><!-- boton -->
 	</section>
-	<section id=guitarras>
+	<section id=guitarras class="guitarras">
 		<!-- guitarras -->
 		<h2>Nuestras guitarras</h2><!-- titulo -->
-		<article>
+		<article class="guitarra">
 			<img src="images/invie-acustica.png" alt="Guitarra invie acustica" width="200">
-			<h3>Invie Acustica</h3>
+			<h3 class="title-b">Invie Acustica</h3>
 				<ol>
 					<li>Estilo vintage</li>
 					<li>Madera pura</li>
