--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Invie - tus mejores guitarras!!</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/invie.css">
+	<link href="https://fonts.googleapis.com/css?family=Allerta|Montserrat" rel="stylesheet">
 	</head>
 	<body id="body">
 	<header id="header" class="header"><!-- header -->
