--- a/index.html
+++ b/index.html
@@ -3,60 +3,61 @@
 	<head>
 	<title>Invie - tus mejores guitarras!!</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/invie.css">
-	<link href="https://fonts.googleapis.com/css?family=Allerta|Montserrat" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/invie.css">	
 	</head>
 	<body id="body">
-	<header id="header" class="header"><!-- header -->
-		
-		<figure><!-- logotipo -->
-			<img src="images/invie.png" width="186"  height="60" alt="Invie logotipo">
-		</figure>
-		<nav class="menu"><!-- menu -->
-		<ul>
-		 <li>
-		 	<a href="index.html">home</a>
-		 </li>
-		 <li>
-		 	<a href="#guitarras">Guitarras</a>
-		 </li>
-		 <li>
-		 	<a href="precios.html">Precios</a>
-		 </li>
-		</ul>
-		</nav>
-	</header>
-	<section id="portada" class="portada">
-		<!-- portada -->
-		<h1 class="titulo">Guitarras inviesibles</h1><!-- titulo -->
-		<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
-		<button>Conoce mas</button><!-- boton -->
-	</section>
-	<section id=guitarras class="guitarras">
-		<!-- guitarras -->
-		<h2>Nuestras guitarras</h2><!-- titulo -->
-		<article class="guitarra">
-			<img src="images/invie-acustica.png" alt="Guitarra invie acustica" width="200">
-			<h3 class="title-b">Invie Acustica</h3>
-				<ol>
-					<li>Estilo vintage</li>
-					<li>Madera pura</li>
-					<li>Incluye estuche invisible de aluminio</li>
-				</ol>
-		</article><article>
-			<img src="images/invie-classic.png" alt="Guitarra invie classic" width="200">
-			<h3>Invie Classic</h3>
-				<ol>
-					<li>Estilo vintage</li>
-					<li>Liviana</li>
-					<li>Inicia tu camino como rockstar</li>
-				</ol>
-		</article><!-- guitarra 2 -->
-		
-
-	</section>
-	<section>
-		<!-- portada -->
-	</section>
+		<header id="header" class="header contenedor"><!-- header -->		
+			<figure class="logotipo"><!-- logotipo -->
+				<img src="images/invie.png" width="186"  height="60" alt="Invie logotipo">	
+				</figure>	
+				<nav class="menu"><!-- menu -->
+					<ul>
+						 <li>
+						 	<a href="index.html">home</a>
+						 </li>
+						 <li>
+						 	<a href="#guitarras">Guitarras</a>
+						 </li>
+						 <li>
+						 	<a href="precios.html">Precios</a>
+						 </li>	
+					</ul>
+				</nav>			
+		</header>
+		<section id="portada" class="portada">
+			<!-- portada -->
+			<div class="contenedor">
+				<h1 class="titulo">Guitarras inviesibles</h1><!-- titulo -->
+				<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
+				<button>Conoce mas</button><!-- boton -->
+			</div>
+		</section>
+		<section id="guitarras" class="guitarras contenedor">
+			<!-- guitarras -->
+			<h2>Nuestras guitarras</h2><!-- titulo -->
+			<article class="guitarra">
+				<img class="derecha" src="images/invie-acustica.png" alt="Guitarra invie acustica" width="350"/>
+				<div class="contenedor-guitarra-a">
+					<h3 class="title-b">Invie Acustica</h3>
+						<ol>
+							<li>Estilo vintage</li>
+							<li>Madera pura</li>
+							<li>Incluye estuche invisible de aluminio</li>
+						</ol>
+					</div>
+			</article>
+			<article class="guitarra">
+				<img class="izquierda" src="images/invie-classic.png" alt="Guitarra invie classic" width="350"/>
+				<div class="contenedor-guitarra-b">
+					<h3 class="title-b">Invie Classic</h3>
+						<ol>
+							<li>Estilo vintage</li>
+							<li>Liviana</li>
+							<li>Inicia tu camino como rockstar</li>
+						</ol>
+				</div>
+			</article>
+		</section>	
 	</body>
 </html>
