--- a/precios.html
+++ b/precios.html
@@ -1,65 +1,64 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Invie - tus mejores guitarras!!</title>
+	<title>Precios de tus mejores guitarras!!</title>
 	<meta charset="utf-8">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/invie.css">	
 	</head>
 	<body id="body">
-		<section id="portada" class="portada background">
-			<header id="header" class="header contenedor"><!-- header -->		
-				<figure class="logotipo"><!-- logotipo -->
-					<img src="images/invie.png" width="186"  height="60" alt="Invie logotipo">	
-					</figure>	
-					<nav class="menu"><!-- menu -->
-						<ul>
-							 <li>
-							 	<a href="index.html">home</a>
-							 </li>
-							 <li>
-							 	<a href="#guitarras">Guitarras</a>
-							 </li>
-							 <li>
-							 	<a href="precios.html">Precios</a>
-							 </li>	
-						</ul>
-					</nav>			
-			</header>
-			<!-- portada -->
-			<div class="contenedor">
-				<h1 class="titulo">Guitarras <span>invie</span>sibles</h1><!-- titulo -->
-				<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
-				<button class="button">Conoce mas</button><!-- boton -->
-			</div>
-		</section>
-		<section id="guitarras" class="guitarras contenedor">
-			<!-- guitarras -->
-			<h2>Nuestras guitarras</h2><!-- titulo -->
-			<article class="guitarra">
-				<img class="derecha" src="images/invie-acustica.png" alt="Guitarra invie acustica" width="350"/>
-				<div class="contenedor-guitarra-a">
-					<h3 class="title-b">Invie Acustica</h3>
-						<ol>
-							<li>Estilo vintage</li>
-							<li>Madera pura</li>
-							<li>Incluye estuche invisible de aluminio</li>
-						</ol>
-					</div>
-			</article>
-			<article class="guitarra b">
-				<img class="izquierda" src="images/invie-classic.png" alt="Guitarra invie classic" width="350"/>
-				<div class="contenedor-guitarra-b">
-					<h3 class="title-b">Invie Classic</h3>
-						<ol>
-							<li>Estilo vintage</li>
-							<li>Liviana</li>
-							<li>Inicia tu camino como rockstar</li>
-						</ol>
-				</div>
-			</article>
-		</section>
-		<footer class="footer">
+		<header id="header" class="header background"><!-- header -->		<div class="contenedor">
+			<figure class="logotipo"><!-- logotipo -->
+				<img src="images/invie.png" width="186"  height="60" alt="Invie logotipo">	
+				</figure>	
+				<nav class="menu"><!-- menu -->
+					<ul>
+						 <li>
+						 	<a href="index.html">home</a>
+						 </li>
+						 <li>
+						 	<a href="index.html#guitarras">Guitarras</a>
+						 </li>
+						 <li>
+						 	<a href="precios.html">Precios</a>
+						 </li>	
+					</ul>
+				</nav>
+			</div>				
+		</header>
+		<section class="tabla">
+		<div class="contenedor">
+			<table>
+				<thead>
+					<tr>
+						<th>Modelo</th>
+						<th>Precio</th>
+						<th>Descripción</th>
+
+					</tr>					
+				</thead>
+				<tbody>
+					<tr>
+						<td>Invie classic</td>
+						<td>$10000</td>
+						<td>Una guitarra muy pro</td>
+					</tr>
+					<tr>
+						<td>Invie classic</td>
+						<td>$10000</td>
+						<td>Una guitarra muy pro</td>
+					</tr>
+					<tr>
+						<td>Invie classic</td>
+						<td>$10000</td>
+						<td>Una guitarra muy pro</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>		
+		</section>	
+	</body>
+	<footer class="footer">
 			<div class="contenedor">
 				<div class="contacto">
 					<img src="images/invie-white.png" alt="logotipo blanco">
@@ -102,6 +101,5 @@
 				</div>
 				</form>
 			</div>	
-		</footer>	
-	</body>
-</html>
+		</footer>
+	</html>
